reverted react-router to 5.0, added LinkContainer to navbar links

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,3 +5,11 @@ main {
 .rating > * + * {
   padding-left: 0.1rem;
 }
+
+.product__title {
+  text-decoration: none;
+}
+
+.product:hover .product__title {
+  text-decoration: underline;
+}
